--- a/Unit 7 - Data Wrangling/7.2 - Data Collection/7.2.5 - API Mini Project/api_data_wrangling_mini_project.ipynb
+++ b/Unit 7 - Data Wrangling/7.2 - Data Collection/7.2.5 - API Mini Project/api_data_wrangling_mini_project.ipynb
@@ -2,180 +2,144 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "This exercise will require you to pull some data from https://data.nasdaq.com/ (formerly Quandl API)."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "As a first step, you will need to register a free account on the https://data.nasdaq.com/ website."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "After you register, you will be provided with a unique API key, that you should store:\r\n",
-    "\r\n",
-    "*Note*: Use a `.env` file and put your key in there and `python-dotenv` to access it in this notebook. \r\n",
-    "\r\n",
-    "The code below uses a key that was used when generating this project but has since been deleted. Never submit your keys to source control. There is a `.env-example` file in this repository to illusrtate what you need. Copy that to a file called `.env` and use your own api key in that `.env` file. Make sure you also have a `.gitignore` file with a line for `.env` added to it. \r\n",
-    "\r\n",
+    "After you register, you will be provided with a unique API key, that you should store:\n",
+    "\n",
+    "*Note*: Use a `.env` file and put your key in there and `python-dotenv` to access it in this notebook. \n",
+    "\n",
+    "The code below uses a key that was used when generating this project but has since been deleted. Never submit your keys to source control. There is a `.env-example` file in this repository to illusrtate what you need. Copy that to a file called `.env` and use your own api key in that `.env` file. Make sure you also have a `.gitignore` file with a line for `.env` added to it. \n",
+    "\n",
     "The standard Python gitignore is [here](https://github.com/github/gitignore/blob/master/Python.gitignore) you can just copy that. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# get api key from your .env file\r\n",
-    "import os\r\n",
-    "from dotenv import load_dotenv\r\n",
-    "\r\n",
-    "load_dotenv()\r\n",
-    "API_KEY = os.getenv('NASDAQ_API_KEY')\r\n",
-    "\r\n",
-    "print(API_KEY)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "KRfk96yoWvruWZ-LjPbo\n"
-     ]
-    }
-   ],
-   "metadata": {}
+    "# get api key from your .env file\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "API_KEY = os.getenv('NASDAQ_API_KEY')\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Nasdaq Data has a large number of data sources, but, unfortunately, most of them require a Premium subscription. Still, there are also a good number of free datasets."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "For this mini project, we will focus on equities data from the Frankfurt Stock Exhange (FSE), which is available for free. We'll try and analyze the stock prices of a company called Carl Zeiss Meditec, which manufactures tools for eye examinations, as well as medical lasers for laser eye surgery: https://www.zeiss.com/meditec/int/home.html. The company is listed under the stock ticker AFX_X."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "You can find the detailed Nasdaq Data API instructions here: https://docs.data.nasdaq.com/docs/in-depth-usage"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "While there is a dedicated Python package for connecting to the Nasdaq API, we would prefer that you use the *requests* package, which can be easily downloaded using *pip* or *conda*. You can find the documentation for the package here: http://docs.python-requests.org/en/master/ "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Finally, apart from the *requests* package, you are encouraged to not use any third party Python packages, such as *pandas*, and instead focus on what's available in the Python Standard Library (the *collections* module might come in handy: https://pymotw.com/3/collections/).\n",
     "Also, since you won't have access to DataFrames, you are encouraged to us Python's native data structures - preferably dictionaries, though some questions can also be answered using lists.\n",
     "You can read more on these data structures here: https://docs.python.org/3/tutorial/datastructures.html"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Keep in mind that the JSON responses you will be getting from the API map almost one-to-one to Python's dictionaries. Unfortunately, they can be very nested, so make sure you read up on indexing dictionaries in the documentation provided above."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "# First, import the relevant modules"
-   ],
+   "execution_count": 101,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# First, import the relevant modules\n",
+    "import requests\n",
+    "import json"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Note: API's can change a bit with each version, for this exercise it is reccomended to use the nasdaq api at `https://data.nasdaq.com/api/v3/`. This is the same api as what used to be quandl so `https://www.quandl.com/api/v3/` should work too.\r\n",
-    "\r\n",
+    "Note: API's can change a bit with each version, for this exercise it is reccomended to use the nasdaq api at `https://data.nasdaq.com/api/v3/`. This is the same api as what used to be quandl so `https://www.quandl.com/api/v3/` should work too.\n",
+    "\n",
     "Hint: We are looking for the `AFX_X` data on the `datasets/FSE/` dataset."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "# Now, call the Nasdaq API and pull out a small sample of the data (only one day) to get a glimpse\r\n",
-    "# into the JSON structure that will be returned"
-   ],
+   "execution_count": 102,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "# Now, call the Nasdaq API and pull out a small sample of the data (only one day) to get a glimpse\n",
+    "# into the JSON structure that will be returned\n",
+    "url = 'https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X/data.json?start_date=2017-01-02&end_date=2017-01-03&api_key=-mMbYGBrRuz6R6yJXsYU'\n",
+    "r = requests.get(url)\n",
+    "json_data = r.json()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "# Inspect the JSON structure of the object you created, and take note of how nested it is,\r\n",
-    "# as well as the overall structure"
-   ],
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'dataset': {'id': 10095370,\n",
-       "  'dataset_code': 'AFX_X',\n",
-       "  'database_code': 'FSE',\n",
-       "  'name': 'Carl Zeiss Meditec (AFX_X)',\n",
-       "  'description': 'Stock Prices for Carl Zeiss Meditec (2020-11-02) from the Frankfurt Stock Exchange.<br><br>Trading System: Xetra<br><br>ISIN: DE0005313704',\n",
-       "  'refreshed_at': '2020-12-01T14:48:09.907Z',\n",
-       "  'newest_available_date': '2020-12-01',\n",
-       "  'oldest_available_date': '2000-06-07',\n",
-       "  'column_names': ['Date',\n",
-       "   'Open',\n",
-       "   'High',\n",
-       "   'Low',\n",
-       "   'Close',\n",
-       "   'Change',\n",
-       "   'Traded Volume',\n",
-       "   'Turnover',\n",
-       "   'Last Price of the Day',\n",
-       "   'Daily Traded Units',\n",
-       "   'Daily Turnover'],\n",
-       "  'frequency': 'daily',\n",
-       "  'type': 'Time Series',\n",
-       "  'premium': False,\n",
-       "  'limit': None,\n",
-       "  'transform': None,\n",
-       "  'column_index': None,\n",
-       "  'start_date': '2021-01-03',\n",
-       "  'end_date': '2020-12-01',\n",
-       "  'data': [],\n",
-       "  'collapse': None,\n",
-       "  'order': None,\n",
-       "  'database_id': 6129}}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'dataset_data': {'limit': None, 'transform': None, 'column_index': None, 'column_names': ['Date', 'Open', 'High', 'Low', 'Close', 'Change', 'Traded Volume', 'Turnover', 'Last Price of the Day', 'Daily Traded Units', 'Daily Turnover'], 'start_date': '2017-01-02', 'end_date': '2017-01-03', 'frequency': 'daily', 'data': [['2017-01-03', 35.9, 35.93, 35.34, 35.48, None, 70618.0, 2515473.0, None, None, None], ['2017-01-02', 34.99, 35.94, 34.99, 35.8, None, 44700.0, 1590561.0, None, None, None]], 'collapse': None, 'order': None}}\n"
+     ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Inspect the JSON structure of the object you created, and take note of how nested it is,\n",
+    "# as well as the overall structure\n",
+    "print(json_data)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "These are your tasks for this mini project:\n",
     "\n",
@@ -186,28 +150,308 @@
     "5. What was the largest change between any two days (based on Closing Price)?\n",
     "6. What was the average daily trading volume during this year?\n",
     "7. (Optional) What was the median trading volume during this year. (Note: you may need to implement your own function for calculating the median.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['limit', 'transform', 'column_index', 'column_names', 'start_date', 'end_date', 'frequency', 'data', 'collapse', 'order'])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {}
+   "source": [
+    "url_full = f'https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X/data.json?start_date=2017-01-01&end_date=2017-12-31&api_key={API_KEY}'\n",
+    "req = requests.get(url_full)\n",
+    "json_data_full = req.json()\n",
+    "json_data_full.keys()\n",
+    "AFX_dict = {}\n",
+    "AFX_dict = json_data_full.get(\"dataset_data\")\n",
+    "AFX_dict.keys()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Date',\n",
+       " 'Open',\n",
+       " 'High',\n",
+       " 'Low',\n",
+       " 'Close',\n",
+       " 'Change',\n",
+       " 'Traded Volume',\n",
+       " 'Turnover',\n",
+       " 'Last Price of the Day',\n",
+       " 'Daily Traded Units',\n",
+       " 'Daily Turnover']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_names = AFX_dict.get(\"column_names\")\n",
+    "col_names"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 106,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "data = AFX_dict.get('data')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AFX_dict_clean = {x:list(y) for x,y in zip(col_names, zip(*data))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Impute None values in open price with -1\n",
+    "for count, value in enumerate(AFX_dict_clean['Open']):\n",
+    "    if value == None:\n",
+    "        AFX_dict_clean['Open'][count] = -1\n",
+    "#AFX_dict_clean['Open']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.11"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_open = max(AFX_dict_clean['Open'])\n",
+    "max_open"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.0"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find minimum positive open price since None values were replaced with -1\n",
+    "min_open = min(i for i in AFX_dict_clean['Open'] if i > 0)\n",
+    "min_open"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate missing Change values\n",
+    "for index, cp in enumerate(AFX_dict_clean['Change']):\n",
+    "    AFX_dict_clean['Change'][index] = (AFX_dict_clean['High'][index]-AFX_dict_clean['Low'][index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8100000000000023"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#maximum in-a-day change based on High and Low price for the day\n",
+    "max_day_change = max(AFX_dict_clean['Change'])\n",
+    "max_day_change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2017-05-11'"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#date of max in-a-day change\n",
+    "AFX_dict_clean['Date'][AFX_dict_clean['Change'].index(max_day_change)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate new list with change in price between adjacent days\n",
+    "AFX_dict_clean['Inter-Day Change'] = []\n",
+    "for i in range(1, len(AFX_dict_clean['Close'])):\n",
+    "    AFX_dict_clean['Inter-Day Change'].append(AFX_dict_clean['Close'][i]-AFX_dict_clean['Close'][i-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.559999999999995"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#absolute maximum change in price between two adjacent days\n",
+    "max_interday_change = max(AFX_dict_clean['Inter-Day Change'], key = abs)\n",
+    "max_interday_change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2017-08-09'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#date of max interday change in price\n",
+    "AFX_dict_clean['Date'][AFX_dict_clean['Inter-Day Change'].index(max_interday_change)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89124.33725490196"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#average daily trade volume\n",
+    "avg_daily_vol = sum(AFX_dict_clean['Traded Volume'])/len(AFX_dict_clean['Traded Volume'])\n",
+    "avg_daily_vol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75630.5"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#median trading volume\n",
+    "def median(lst):\n",
+    "    lst.sort()\n",
+    "    med1 = lst[len(lst)//2]\n",
+    "    med2 = lst[len(lst)//2 - 1]\n",
+    "    med = (med1 + med2)/2\n",
+    "    return med\n",
+    "\n",
+    "median(AFX_dict_clean['Traded Volume'])\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7635eb1b9d0fe97add78a7368b6b431c09bb8ad5c42e437d64abdd99821c31ae"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.1 64-bit ('dsc_v5_solutions-7Q1D_Dt-': venv)"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -219,10 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
-  },
-  "interpreter": {
-   "hash": "7635eb1b9d0fe97add78a7368b6b431c09bb8ad5c42e437d64abdd99821c31ae"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
